# docker-swarm-ctl

./: .dockerignore  .env  .env.example  .gitignore  API.md  API_ENDPOINTS.md  ARCHITECTURE.md  CLAUDE.md  DEBUG_HOSTS_NAVIGATION.md  DEVELOPMENT.md  DOCKER_TCP_SETUP.md  DefaultUsers.md  Dockerfile  LOG_STREAMING_MIGRATION.md  MULTI_HOST_ARCHITECTURE.md  PHASE2_PLAN.md  PLAN.md  Plan.md  README.md  SPEC  TESTERS_MANUAL.md  TESTING_STRATEGY.md  WEBSOCKET_AGENT_ARCHITECTURE.md  WORKLOG.md  WorkLog.md  Worklog.md  check_actual_swarm.py  configure-docker-tcp-wsl.sh  create_nginx_service.py  debug_page.py  debug_services_page.py  debug_wizard_state.py  docker-compose.test.yml  docker-compose.yml  enable-docker-tcp.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  run-tests.sh  (+23 more)
backend/: .env.example  Dockerfile  REFACTORING.md  REFACTORING_PROGRESS.md  SSH_CONFIG_EXAMPLE.md  alembic.ini  debug_wizard_state.py  manage_hosts.py  pytest.ini  requirements.txt  reset_circuit_breaker.py  reset_circuit_breaker_simple.py  reset_ssh_host.py  start.sh  test_delete_host.py  test_docker_connection.py  test_host_connection.py  test_ssh_connection.py  test_swarm_detection.py  test_swarm_host.py  test_wizard_state_update.py
cli/: Makefile  README.md  go.mod  go.sum  main.go  requirements.txt  setup.py  test_cli.py
docs/: WIZARD_FRAMEWORK.md
dsctl_cli/: main.py
dsctl_server/: main.py
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
lab/: .env.lab  README.md  add_lab_hosts.py  ansible-setup.md  ansible.cfg  inventory  (+4 more)
(+398 files in other folders)
