[tool.poetry]
name = "docker-control-platform"
version = "1.0.0"
description = "Docker Control Platform - A web-based platform for managing Docker environments"
authors = ["vilosource <vilosource@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
playwright = "^1.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
